Resolve WIT-4169 "Aws tech adapters open source release"
# New features and improvements

- Updated documentation for better clarity and completeness
- Updated dependency `java-tech-adapter-framework-core`: from version 1.0.0-2.2.0 to 1.1.0-2.2.0
- Improved the code for performing requests at `/v1/dataquality` endpoint
- New unit tests

# Related issue

WIT-4169

--- a/report/pom.xml
+++ b/report/pom.xml
@@ -39,6 +39,7 @@
                 <configuration>
                     <excludes>
                         <exclude>com/witboost/provisioning/dq/sifflet/Main.class</exclude>
+                        <exclude>generated/witboost/mesh/provisioning/dataquality/sifflet/openapi/**/*.class</exclude>
                     </excludes>
                 </configuration>
                 <executions>
